--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 xola_elasticsearch_proxy:
-     pattern:  /elasticsearch
+     pattern:  /elasticsearch/{slug}
      defaults: { _controller: XolaElasticsearchProxyBundle:ElasticsearchProxy:proxy }
