Allow all the urls that start with /elasticsearch  to hit our proxy endpoint. slug will now hold the rest of the uri following the matched part.

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,5 @@
 xola_elasticsearch_proxy:
      pattern:  /elasticsearch/{slug}
      defaults: { _controller: XolaElasticsearchProxyBundle:ElasticsearchProxy:proxy }
+     requirements:
+        slug: ".+"
