--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,5 +1,5 @@
 xola_elasticsearch_proxy:
-     pattern:  /elasticsearch/{slug}
+     pattern:  /elasticsearch/{index}/{slug}
      defaults: { _controller: XolaElasticsearchProxyBundle:ElasticsearchProxy:proxy }
      requirements:
         slug: ".+"
