--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,11 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
-        "symfony/framework-bundle": "~2.1"
+        "php": ">=7",
+        "symfony/framework-bundle": "~3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7"
     },
     "autoload": {
         "psr-0": {
