--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: php
 
 php:
+  - 7.1
   - 7.2
   - 7.3
   - 7.4
 
 env:
+  - SYMFONY_VERSION="2.1"
   - SYMFONY_VERSION="3.0"
 
 before_script:
