--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=7.1",
-        "symfony/framework-bundle": "~3.0"
+        "symfony/framework-bundle": ">=2.1 <4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7"
