--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ before_script:
   - composer self-update
   - composer --version
   - composer require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
-  - composer install -n --dev --prefer-source
+  - composer install -n --prefer-source
 
 script: phpunit --coverage-text --configuration phpunit.xml.dist
