--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1",
-        "symfony/framework-bundle": ">=3.4 <5",
+        "symfony/framework-bundle": "^3.4|^4.0",
         "ext-curl": "*",
         "ext-json": "*"
     },
