XOL-6302 make symfony autowiring kick in

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -4,5 +4,5 @@ services:
         public: false
 
     Xola\ElasticsearchProxyBundle\Controller\:
-        resource: '../Controller'
+        resource: '../../Controller'
         tags: ['controller.service_arguments']
